--- a/Speech/Main.storyboard
+++ b/Speech/Main.storyboard
@@ -129,22 +129,23 @@
                                 <rect key="frame" x="16" y="467" width="343" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YNn-aZ-O9L">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5T3-8F-wPJ">
                                 <rect key="frame" x="16" y="210" width="343" height="337"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="0.19606164383561644" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.99278582334931287" green="0.94720426659672052" blue="1" alpha="0.20165346746575341" colorSpace="custom" customColorSpace="sRGB"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
+                        <outlet property="currentBidLabel" destination="1dQ-dP-rHy" id="xM6-ck-io1"/>
                         <outlet property="currentBidView" destination="gcc-Ve-suH" id="gl6-R3-4rY"/>
-                        <outlet property="eventList" destination="YNn-aZ-O9L" id="fW0-bf-eZz"/>
+                        <outlet property="eventList" destination="5T3-8F-wPJ" id="762-fw-Vij"/>
+                        <outlet property="menuView" destination="3Tk-Hj-9DE" id="V4V-oo-QFl"/>
                         <outlet property="micStart" destination="aJY-83-MIx" id="f9K-5z-PPO"/>
                         <outlet property="micStop" destination="wgH-jh-Nuq" id="GWw-ve-9za"/>
                         <outlet property="textView" destination="vtY-SX-V3c" id="aym-NZ-3gu"/>
