function fixes of transcription per response handling

--- a/Speech/Base.lproj/LaunchScreen.storyboard
+++ b/Speech/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gavl-logo" translatesAutoresizingMaskIntoConstraints="NO" id="63S-ul-DAu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon512" translatesAutoresizingMaskIntoConstraints="NO" id="63S-ul-DAu">
                                 <rect key="frame" x="123" y="276" width="169" height="184"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -35,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="gavl-logo" width="172" height="104"/>
+        <image name="icon512" width="512" height="512"/>
     </resources>
 </document>
