--- a/Speech/Main.storyboard
+++ b/Speech/Main.storyboard
@@ -128,12 +128,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="94"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gi3-0h-dXb">
+                                    <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gi3-0h-dXb">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gavl-logo" translatesAutoresizingMaskIntoConstraints="NO" id="KxP-gr-P0M">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon512" translatesAutoresizingMaskIntoConstraints="NO" id="KxP-gr-P0M">
                                         <rect key="frame" x="0.0" y="28" width="375" height="56"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -218,7 +218,7 @@
     </scenes>
     <resources>
         <image name="bg-grey" width="1500" height="780"/>
-        <image name="gavl-logo" width="172" height="104"/>
+        <image name="icon512" width="512" height="298"/>
         <image name="manual-enter" width="120" height="120"/>
         <image name="start512" width="512" height="512"/>
         <image name="stop512" width="512" height="512"/>
